fix(app/pi): proposal draft and card spacing fixes

--- a/plugins-structure/apps/politeia/src/components/Proposal/common/styles.module.css
+++ b/plugins-structure/apps/politeia/src/components/Proposal/common/styles.module.css
@@ -72,10 +72,6 @@
   align-items: center;
 }
 
-.proposalSubtitle {
-  padding-top: var(--spacing-small);
-}
-
 .disabled {
   color: var(--color-gray-light);
 }
